# ksubtitleripper-svn

./: AUTHORS  ChangeLog  Makefile.in  README  TODO  configure  configure.in  ksubtitleripper.kdevelop.pcs  ksubtitleripper.kdevses
doc/: Makefile.in
doc/en/: Makefile.in  index.docbook
po/: Makefile.in
src/: Makefile.in  convertdialog.cpp  convertdialog.h  extractdialog.cpp  extractdialog.h  ksubtitleripper.cpp  ksubtitleripper.desktop  ksubtitleripper.h  ksubtitleripper.lsm  ksubtitleripperview.cpp  ksubtitleripperview.h  ksubtitleripperviewdlg.ui  main.cpp  newproject.cpp  newproject.h  project.cpp  project.h
tags/ksubtitleripper-0.3.1/: ChangeLog  Makefile.am  configure.in.in
tags/release-0.1/: ksubtitleripper.kdevelop  ksubtitleripper.spec
tags/release-0.2/: Makefile.am  ksubtitleripper.kdevelop  ksubtitleripper.spec
tags/release-0.2/src/: Makefile.am  configuration.cpp  configuration.h  convertdialog.h  createsrt.cpp  extractdialog.cpp  extractprocess.h  ksubtitleripper.h  ksubtitleripperview.cpp  ksubtitleripperview.h  prefdialog.cpp  prefgeneral.h  prefgenerallayout.ui  previewdialog.cpp
tags/release-0.3/: ksubtitleripper.spec
trunk/: ChangeLog  Doxyfile  Makefile.am  TODO  configure.in.in  ksubtitleripper.kdevelop  ksubtitleripper.spec
trunk/doc/: Makefile.am
trunk/icons/: Makefile.am
trunk/po/: Makefile.am  es.po  fr.po  ksubtitleripper.pot  tr.po
trunk/src/: Makefile.am  configuration.cpp  configuration.h  convertdialog.cpp  convertdialog.h  createsrt.cpp  createsrt.h  extractdialog.cpp  extractdialog.h  extractprocess.cpp  main.cpp  (+27 more)
(+35 files in other folders)
